# 20th_smart_car_loongson

./: CMakeLists.txt  README.md  compile.sh  pack.sh
configs/: config.json
docs/: README.md
env/99pi/docs/: README.md
env/99pi/script/: kernel_build.sh
env/docs/: README.md
env/env/docs/: README.md
env/env/script/: cross_compiler_setup.sh  env_setup.sh
env/opencv/docs/: README.md
env/opencv/script/: opencv_compile.sh  opencv_configure.sh
hardware/: LOONGSON_DOCKER.epro  README.md
include/: common.h  common_program.h  config.h  control.h  libdata_process.h  libdata_store.h  path.h  register.h  track.h
include/control/: base.h  motor.h  steer.h
lib/: config.cpp  control.cpp  libdata_process.cpp  libimage_process.cpp  register.cpp  track.cpp
lib/control/: motor.cpp  steer.cpp
software/: README.md
software/configs/: config.json
software/include/: common.h  control.h  track.h
software/lib/: config.cpp  control.cpp  track.cpp
software/src/: main.cpp
src/: main.cpp  path_circle.cpp
